--- a/1galleryphotos.css
+++ b/1galleryphotos.css
@@ -1,13 +1,23 @@
 .container-fluid{
-    background-color: 	#F9EFEF;
+    width:100%;
+    height: auto;
+    background-size: cover;
+    background-color: #0c0c0c;
+    background-size: 1500px 750px;
+    border-radius: 0 !important;
+    margin-bottom: 0px;
+    padding-top: 30px;
+    padding-bottom: 10px;
 }
 
 .row{
     justify-content: center;
-    padding-top: 20px;
+    padding-top: 10px;
+    margin-bottom: 20px;
 }
+
 .box{  
-    padding-top: 50px;
+    padding-top: 20px;
     padding-left: 30px;
     padding-right: 20px;
     position: static;
@@ -16,10 +26,25 @@
     overflow: hidden;
 }
 
+.btn{
+    font-size: 25px;
+    color: white;
+    background-color: #ad241a;
+    padding: 3px 30px 6px 30px;
+}
 .image-zoom img{
     transition: 0.5s;
 }
 
 .image-zoom:hover img{
     transform: scale(1.3);
+}
+
+.title{
+    font-family: 'Bai Jamjuree', sans-serif;
+    font-weight: bolder;
+    color: white;
+    font-size: 5vw;
+    margin-top: 0;
+    text-align: center;
 }
