--- a/1portfolio.css
+++ b/1portfolio.css
@@ -1,7 +1,16 @@
+img {
+    max-width: 100%;
+    height: auto;
+}
+
 .container-fluid{
-    padding-top: 30px;
+    background-color: #0c0c0c;
+    background-size: 100% 100%;
+    width:100%;
+    height: auto;
+    padding-top: 60px;
     padding-left: 0px;
-    padding-right: 50px;
+    padding-right: 30px;
 }
 
 .col-md-3{
@@ -14,19 +23,19 @@
     width: 400px;
     height: 580px;
     perspective: 1000px;
-  }
+}
   
-  .flip-box-inner {
+.flip-box-inner {
     position: relative;
     width: 100%;
     height: 100%;
     transition: transform 1.0s;
     transform-style: preserve-3d;
-  }
+}
   
-  .flip-box:hover .flip-box-inner {
+.flip-box:hover .flip-box-inner {
     transform: rotateY(180deg);
-  }
+}
   
 .flip-box-front, .flip-box-back {
     position: absolute;
@@ -38,14 +47,21 @@
   
 .flip-box-back {
     background-color:rgb(25,25,112);
+    max-width: 100%;
+    height: auto;
     color: white;
     transform: rotateY(180deg);
 
 }
 .sname{
+    padding-top: 20px;
+    padding-left: 10px;
+    padding-right: 10px;
+    font-family: 'Rubik Mono One', sans-serif;
     text-align: center;
 }
 .rname{
+    font-family: 'Coda Caption', sans-serif;
     text-align: center;
 }
 
@@ -58,21 +74,33 @@
     margin-right: 15px;
     margin-top: 0px;
     margin-bottom: 0px;
-
 }
+
 .profile{
+    font-family: 'Oswald', sans-serif;
+    padding-top: 0;
+    padding-bottom: 0;
+    padding-left: 10px;
     text-align: left;
-    font-size: 20px;
+    font-size: 22px;
     font-weight: bold;
     display: inline;
 }
 .description{
+    font-family: 'Bai Jamjuree', sans-serif;
+    font-size: 22px;
+    padding-left: 10px;
     text-align: left;
     padding-top: 0px;
     padding-bottom: 0px;
 }
 
+
 #proftitle{
+    font-family: 'Oswald', sans-serif;
     font-weight: bolder;
+    color: white;
     text-align: center;
+    font-size: 5.0vw;
+    padding-bottom: 10px;
 }
