--- a/1about.css
+++ b/1about.css
@@ -1,61 +1,34 @@
 
 .jumbotron .container {
     position:relative;
-    margin-top: 0px;
-    margin-bottom: 50px;
+    margin-bottom: 2%;
     width:100%;
-    height: auto;
+    height: 100%;
 }
 
 .d-block{
-    opacity: 0.8;
+    opacity: 0.7;
     width: 1400px;
     height: 450px;
 }
 
-.btn{
-    padding: 10px 20px 10px 20px;
-}
-
-.fa {
-    padding: 10px 10px 10px 10px;
-    font-size: 30px;
-    width: 50px;
-    text-align: center;
-    text-decoration: none;
-    margin: 10px 10px 10px 10px;
-    border-radius: 50%;
-    max-width: 100%;
-
+@media screen and (max-width: 800px) {
+    .d-block {
+      width: 100%;
+      height: auto;
+    }
   }
-  
-.fa:hover {
-    opacity: 0.7;
-}
-  
-.fa-facebook {
-    background: #3B5998;
-    color: white;
-    max-width: 100%;
-}
 
-.fa-twitter {
-    background: #55ACEE;
-    color: white;
-    max-width: 100%;
-}
-
-.fa-instagram {
-    background:  white;
-    color: rgb(189, 27, 81);
-    max-width: 100%;
+.btn{
+    padding: 1% 2% 1% 2%;
+    font-size: 1.5vw;
 }
 
 .leading{
     font-size: 4vw;
     color: white;
     font-weight: bolder;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Oswald', sans-serif;
 }
 
 .circular-img{
@@ -66,14 +39,10 @@
     height: auto;
 }
 
-#list-example{
-    color: white;
-}
-
 #firstjb {
     background-image:url('assemble1.jpg');
     background-repeat: no-repeat;
-    background-size: cover;
+    background-size: 100% 100%;
     margin-bottom: 0px;
     border-radius: 0 !important;
     width:100%;
@@ -85,7 +54,7 @@
     font-weight: bolder;
     font-family: 'Oswald', sans-serif;
     color: black;
-    font-size:4.0vw;
+    font-size:5.0vw;
     text-align: center;
 }
 
@@ -102,7 +71,7 @@
     border-radius: 0 !important;
     margin-top: 0;
     margin-bottom: 0;
-    padding-top: 10px 10px 10px 10px;
+    padding-top: 40px;
     width:100%;
     height:auto;
     
@@ -114,7 +83,7 @@
     border-radius: 0 !important;
     margin-top: 0;
     margin-bottom: 0;
-    padding-top: 10px 10px 10px 10px;
+    padding-top: 40px;
     width:100%;
     height:auto;
     
@@ -133,30 +102,20 @@
     justify-content: center;
     font-weight: bolder;
     text-align: left;
-    font-size: larger;
     color: white;
     padding-top: 10px;
     padding-left: 30px;
-    font-size:3vw;
+    font-size: 30px;
     max-width: 100%;
 
 }
 
 #aboutme{
     font-family: 'Bellota Text', cursive;
-    font-size:25px;
+    font-size:20px;
     color: white;
     text-align: justify;
     padding-right: 10px;
     padding-left: 30px;
 
-}
-
-#follow{
-    font-size:20px;
-    font-family: 'Bellota Text', cursive;
-    font-weight: bolder;
-    color: white;
-    text-align: justify;
-    padding-left: 30px;
 }
