--- a/1galleryphotos.css
+++ b/1galleryphotos.css
@@ -1,3 +1,11 @@
+@media screen and (max-width: 600px) {
+    img{
+        max-width: 100%;
+        height: 100%;
+    }
+  }
+
+
 .container-fluid{
     width:100%;
     height: auto;
