--- a/navstyle.css
+++ b/navstyle.css
@@ -1,10 +1,7 @@
 .navbar{
    background-color:#8f1010;
-   opacity: 0.9;
    width: 100%;
    height: auto;
-   position: sticky;
-   top: 0;
    padding-right: 0px;
 }
 
@@ -19,5 +16,15 @@
     font-weight: bolder;
     color: white;
     font-size: 20px;
-    margin-left: 15px;
+    margin-left: 20px;
 }
+
+.navbar-toggler{
+    border-color: white;
+    margin-right: 20px;
+}
+
+#navbarCollapse{
+    margin-right: 20px;
+}
+
